--- a/index.html
+++ b/index.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        table, th, td {
+            border: 1px solid red;
+            border-collapse: collapse;
+    </style>
 </head>
 <body>
     <h1>I am want to visit makkha</h1>
+    <pre>
+        <h2>i am try everyday is deffrent work</h2>
+        <h2>i should help the plastine people</h2>
+        <h2>Plastine children are so inoceint</h2>
+    </pre>
+    <table style="width:100%">
+        <tr>
+            <th clospan="2">Name</th>
+            <th>Age</th>
+        </tr>
+        <tr>
+            <td>iyakub</td>
+            <td>ali</td>
+            <td>50</td>
+        </tr>
+    </table>
 </body>
 </html>
