--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
             <td>50</td>
         </tr>
     </table>
+    <br>
+    <br>
+   <input type="email" name="email">
+   <input type="submit" value="send">
+
 </body>
 </html>
